--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
             <div class="stats-item d-flex align-items-center w-100 h-100">
               <i class="bi bi-people color-pink flex-shrink-0"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="134" data-purecounter-duration="1" class="purecounter"></span>
+                <span data-purecounter-start="0" data-purecounter-end="120" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Dedicated Members</p>
               </div>
             </div>
@@ -213,7 +213,7 @@
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Dressler Osei Bermpah</h4>
+              <h4>Dressler Osei Antwiwaa Bermpah</h4>
               <span>Financial Secretary</span>
               
             </div>
