--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8790293516034760"
+     crossorigin="anonymous"></script>
   <meta name="google-site-verification" content="4FDluMYYViZuxVorVAePzozhsEC-47aROGwZcEu4mWk" />
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
