--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="google-site-verification" content="4FDluMYYViZuxVorVAePzozhsEC-47aROGwZcEu4mWk" />
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="site-verification" content="41945b4a97562a07c94c390ff5934edc"/>
 
   <title>https://www.royalbenefactors.com</title>
   <meta content="" name="description">
