--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="site-verification" content="41945b4a97562a07c94c390ff5934edc"/>
+  <script type="text/javascript" src="https://cdn.diclotrans.com/sdk/v1/29280/b4f29d2d76b9f944754cae632dafae43bc355685/lib.js"></script>
 
   <title>https://www.royalbenefactors.com</title>
   <meta content="" name="description">
