--- a/about.html
+++ b/about.html
@@ -390,7 +390,7 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/ -->
-          Designed by <a href="https://www.instagram.com/dez_mon.a/#">Delove Studios</a>
+          Designed by <a href="https://www.instagram.com/delove_dez/#">Delove Studios</a>
         </div>
       </div>
     </div>
